Bug 25712 - asus laptop doesn't have sound anymore
Summary: asus laptop doesn't have sound anymore
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Platform_x86 (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_platform_x86@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-27 12:53 UTC by Kurt Roeckx
Modified: 2012-06-13 15:00 UTC (History)
3 users (show)

See Also:
Kernel Version: 2.6.33
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
acpi dump (27.70 KB, application/x-gzip)
2011-01-01 14:22 UTC, Kurt Roeckx
Details
dmi decode (9.34 KB, text/plain)
2011-01-13 18:23 UTC, Kurt Roeckx
Details

Description Kurt Roeckx 2010-12-27 12:53:00 UTC
I just tried a newer kernel and noticed that I didn't have
any sound anymore.  Normally I hear all kind of interference
in the earphones and now it stops when asus_laptop gets loaded.  I
can play things, but nothing comes out.  It feels like it disables
something it shouldn't.

I did a bisect with this as result:
d99b577c729c4a29679fb1f605f9ccace154e0e5 is the first bad commit
commit d99b577c729c4a29679fb1f605f9ccace154e0e5
Author: Corentin Chary <corentin.chary@gmail.com>
Date:   Fri Jan 22 21:20:57 2010 +0100

    asus-laptop: stop using ASUS_HANDLE and use relative methods instead

    Stop using ASUS_HANDLE because most of the time it is not needed.
    This macro was introduced to display_get and lcd_switch which are not
    part of the interface provided by Asus, and are scheduled for removal.

    Signed-off-by: Corentin Chary <corentincj@iksaif.net>

:040000 040000 4576a0beef38ee3440e14d2ad3f194cfa3526d2a b7b0beae2cdd848738ea5b30d7a05d800e756cfa M      drivers
Comment 1 Kurt Roeckx 2010-12-28 01:06:44 UTC
If I add the parameter "wlan_status=-1" it audio doesn't get disabled.  This laptop doesn't have on board wireless.

Kurt
Comment 2 Corentin Chary 2011-01-01 09:09:30 UTC
Wow, that seems really wrong.

Can you send me the output of acpidump | gzip ?

Thanks,
Comment 3 Kurt Roeckx 2011-01-01 14:22:46 UTC
Created attachment 42082 [details]
acpi dump

During boot I see the following messages:
[   11.357632] asus_laptop: Asus Laptop Support version 0.42
[   11.372321] asus_laptop: Error calling CWAP(1)
[   11.374462] asus_laptop:   L84F model detected
[   11.385042] input: Asus Laptop extra buttons as /devices/platform/asus_laptop/input/input8
[   11.393055] Registered led device: asus::mail

The dump file seems to say L1400B, which might make more sense for the model number.
Comment 4 Corentin Chary 2011-01-03 09:37:08 UTC
Hum, the DSDT provides a WLED method, traditionally used to control the wireless device/led, but that one control the sound card, great !

For L84F it's the string returned by the INIT() method.

Does the mail led works ? (/sys/class/leds/asus::mail/).

Is there any BIOS updates for your model ? because your dsdt seems really broken.
Comment 5 Kurt Roeckx 2011-01-03 11:26:07 UTC
I can toggle the led, so that works perfectly.

I can't find any BIOS version online.  It's a rather old laptop.
Comment 6 Kurt Roeckx 2011-01-13 17:49:52 UTC
Do you have a suggestion on how to fix this?
Comment 7 Corentin Chary 2011-01-13 17:58:18 UTC
Sorry for the delay, I did not see your previous answer. As a short term workaround, you should use "wlan_status=-1".

The only thing I can do is probably blacklisting this model, could you send me the output of dmidecode ?

Thanks,
Comment 8 Kurt Roeckx 2011-01-13 18:23:02 UTC
Created attachment 43442 [details]
dmi decode
Comment 9 Kurt Roeckx 2011-01-20 18:17:09 UTC
So is there something else I can do?
Comment 10 Corentin Chary 2011-01-21 10:10:46 UTC
Sorry fort the delay, again....

Could you try that patch ?

http://git.iksaif.net/?p=acpi4asus.git;a=commit;h=6ffb6745a7d115c2f1f23351db97ccff98d66ca7

Thanks,
Comment 11 Kurt Roeckx 2011-01-23 00:01:32 UTC
That patch fixes my problem.

Testing some more I found out that the audio isn't completely disabled, it's just very low volume, like it's muted or something.
Comment 12 Florian Mickler 2011-03-29 00:33:15 UTC
A patch referencing this bug report has been merged in v2.6.38-9043-gc585015:

commit af96f87703f33a4dba4b51c7b3f0d6f874aa4853
Author: Corentin Chary <corentin.chary@gmail.com>
Date:   Sun Feb 6 13:27:30 2011 +0100

    asus-laptop: let WLED alone on L1400B

Note You need to log in before you can comment on or make changes to this bug.